force-app/main/default/objects/custom_create211__c/custom_create211__c.object-meta.xml
<CustomObject>
    <label>Custom created object211</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects211</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>