force-app/main/default/objects/custom_create211__c/fields/custom_create_211field548__c.field-meta.xml
<CustomField>
    <fullName>custom_create_211field548__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 211field548</label>
    <type>Checkbox</type>
</CustomField>